# agent_team_monorepo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEX_REQUIREMENTS.md  ENHANCED_LOGGING_EXAMPLE.md  LOCAL_DEMO_GUIDE.md  LOCAL_SETUP_GUIDE.md  MEMORY_PERSISTENCE_IMPLEMENTATION.md  MEMORY_PERSISTENCE_PLAN.md  README.md  agent_team_monorepo.code-workspace  auth_request.json  aws_ecs_grpc_service_discovery.md  check_db_connections.py  comprehensive_personal_assistant_workflow.json  create_manual_workflow.sh  create_manual_workflow_auto_id.sh  create_manual_workflow_final.sh  create_manual_workflow_name_based.sh  create_manual_workflow_v2.sh  create_simplified_workflow.sh  create_test_workflow.py  create_workflow_curl.sh  create_workflow_with_curl.py  create_workflow_with_simplified_connections.sh  debug_get_workflow.sh  debug_validation.sh  debug_workflow_data.sh  deploy_execution_logs_table.sql  direct_workflow_creation.sh  docker-compose.yml  final_validation_test.py  get_workflow_curl.sh  package.json  personal_assistant_workflow.json  pyrightconfig.json  query_workflow.sh  show_readable_logs.py  simple_validation_test.py  (+19 more)
apps/backend/: .gitignore  .pre-commit-config.yaml  CANCEL_ERROR_FIX.md  CANCEL_EXPLANATION.md  CHANGES_SUMMARY.md  CLAUDE.md  CLOUDWATCH_LOGGING.md  CURSOR_SETUP.md  FASTAPI_QUICKSTART.md  IS_FINAL_BEST_PRACTICE.md  LOG_FORMAT_CONFIG.md  NOTION_NODE_UPDATES.md  OBSERVABILITY.md  PRE-DEPLOYMENT.md  PRODUCT_SOLUTION.md  PROJECT_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  REMOVE_ROUTER_PLAN.md  SSE_FIX_REPORT.md  SSE_PRODUCTION_DESIGN.md  TESTING_SETUP.md  TEST_RESULTS.md  TEST_WORKFLOW_README.md  UPGRADE_SUMMARY.md  WORKFLOW_DELETE_MIGRATION.md  WORKFLOW_INTEGRATION_COMPLETION_REPORT.md  WORKFLOW_TEST_FIX_SUMMARY.md  __init__.py  chat.py  chat_edit.py  chat_improved.py  chat_interactive.py  chat_prod.py  chat_test.py  check_execution.py  debug_clarification.py  debug_req.md  deployment_version.txt  docker-compose.dev.yml  (+106 more)
apps/backend/.venv-pip/: pyvenv.cfg
apps/backend/api-gateway/: .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  __init__.py  api_gateway_test.json  check_mcp_keys.py  demo_external_apis.py  demo_startup_checks.py  main.py  pyproject.toml  pytest.ini  quick_test.py  run_integration_tests.sh  run_mcp_tests.py  start.sh  test_core_functionality.py  test_integrated_workflow.py  test_integration_validation.py  test_new_endpoints.py  test_node_converter.py  test_node_knowledge.py  test_session_simple.py  test_streaming_modes.py  test_unified_workflow.sh  test_workflow_integration.py  validate_external_apis.py  workflow_test_result.json
apps/backend/api-gateway/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  models.py
apps/backend/api-gateway/clients/: __init__.py  elasticsearch_client.py  node_knowledge_client.py
apps/backend/api-gateway/core/: __init__.py  config.py  config_validator.py  grpc_client.py  logging_middleware.py  mcp_exceptions.py  (+2 more)
apps/backend/scripts/: MIGRATION_GUIDE.md  README.md  generate_workflow_icons.py  migrate_workflows.py
apps/backend/shared/: workflow_agent_pb2_grpc.py
apps/backend/tests/: README.md  conftest.py  test_chat_clean.py  test_chat_detailed.py  test_openai_mcp_integration.py
apps/backend/workflow_agent/: CLARIFICATION_READY_REFACTOR.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  CURRENT_TABLE_SCHEMA.md  DATABASE_FIELDS_RATIONALE.md  DATABASE_SCHEMA.md  DOCKER_README.md  Dockerfile  GAP_ANALYSIS_ENHANCEMENT_SUMMARY.md  MAIN_BRANCH_INTEGRATION.md  RAG_INTEGRATION.md  README.md  REFACTORING_SUMMARY.md  __init__.py  debug_server.py  generated_workflow.json  graph.py  integration_test.py  langgraph.json  main.py  main_fastapi.py  pyproject.toml  pyrightconfig.json  quick_start.sh  run_tests.py  start_docker.sh  stop_docker.sh  telemetry_imports.py  test_architecture_alignment.py  test_clarification_logic.py  test_consultant_questions.py  test_debug_flow.py  test_gap_analysis.py  test_gap_loop_fix.py  test_gap_optimization.py  test_gap_resolution.py  test_integration.py  test_llm_provider.py  test_logging.py  (+10 more)
apps/backend/workflow_engine/: .gitignore  CLAUDE.md  DEBUG_GUIDE.md  Dockerfile  ENHANCED_EXECUTION_IMPLEMENTATION.md  EXTERNAL_API_NODES_SUMMARY.md  FASTAPI_DEPLOYMENT_GUIDE.md  Makefile  OAUTH_CONFIG.md  README.md  SERVER_README.md  SERVICE_REFACTOR_SUMMARY.md  WORKFLOW_ENGINE_ARCHITECTURE.md  __init__.py  alembic.ini  check_node_templates.py  clean_database.py  comprehensive_logging_demo.py  config.py  create_test_workflow.py  database.py  database_direct.py  database_grpc_server.py  database_service.py  debug_ai_slack_integration.md  debug_complete_system.py  debug_database.py  debug_db_metadata.py  debug_execution_service_step_by_step.py  debug_execution_status.py  debug_metadata_update.py  debug_system.py  debug_workflow_id_type.py  docker-compose.test.yml  env.example  executor.py  fix_proto_imports.py  generate_proto.py  init_database.py  insert_missing_nodes.py  (+45 more)
apps/backend/workflow_engine_OLD/: Dockerfile  Makefile  OPTIMIZED_LOGGING_ARCHITECTURE.md  env.example  start_server.sh  test_oauth2_integration.py
apps/backend/workflow_engine_OLD_DISABLED/: .gitignore  CLAUDE.md  EXTERNAL_API_NODES_SUMMARY.md  README.md  debug_ai_slack_integration.md  demo_business_logger.py  execution_service_status_enhancement.py  pyproject.toml  quick_debug.sh  start_backend_fixed.py  workflow_execution_status_audit.py
apps/backend/workflow_engine_v2/: AI_MEMORY_INTEGRATION_ANALYSIS.md  Dockerfile  HIL_IMPLEMENTATION_COMPLETE.md  PERSISTENT_MEMORY_IMPLEMENTATION.md  README.md  VARIABLE_NAMES_IMPROVEMENTS.md  __init__.py  main.py  pytest.ini  requirements.txt  startup.sh
apps/backend/workflow_scheduler/: Dockerfile  README.md  TESTING_MODE.md  dependencies.py  main.py  pyproject.toml  start.sh  test_trigger_system.py
apps/demo_apps/rag_comparison_demo/: README.md  debug_connection.py  demo.py  function_only.sql  input_examples.md  langgraph.json  pyproject.toml  studio_workflow.py  test_rag_query.py  test_service_role.py
docs/: intro.md  (+3 more)
(+1446 files in other folders)
