# This is a UV workspace root - no project definition needed
# All actual packages are defined in the member directories

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# UV Workspace 配置
[tool.uv.workspace]
members = ["api-gateway", "workflow_agent", "workflow_engine"]

# 共享工具配置
[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# 依赖分组 - 按功能组织
[dependency-groups]
shared-infra = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0", 
    "protobuf>=6.0.0",
    "structlog>=23.2.0",
]

shared-config = [
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

dev-tools = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1", 
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
] 