[project]
name = "api-gateway-mvp"
version = "1.0.0"
description = "API Gateway MVP for Workflow Agent Team with Supabase Auth"
authors = [
    {name = "Workflow Agent Team", email = "team@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    # Core FastAPI stack
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.26.0",
    "pydantic>=2.7.4",
    "pydantic-settings==2.1.0",
    "python-multipart>=0.0.6",

    # Email validation for Pydantic EmailStr
    "email-validator>=2.0.0",

    # Database and Auth
    "supabase>=2.9.0",  # Supabase client with auth support
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    "structlog>=23.2.0",

    # gRPC dependencies
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.26.1,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",         # 测试覆盖率
    "pytest-mock>=3.10.0",       # Mock支持
    "httpx>=0.24.0",              # For testing FastAPI
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# uv configuration - mirrors dev dependencies
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0", 
    "pytest-cov>=4.0.0",         # 测试覆盖率
    "pytest-mock>=3.10.0",       # Mock支持
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[tool.uv.sources]
# Add any local package sources here if needed

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
