[project]
name = "api-gateway-mvp"
version = "1.0.0"
description = "API Gateway MVP for Workflow Agent Team with Supabase Auth"
authors = [
    {name = "Workflow Agent Team", email = "team@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    # Core FastAPI stack
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.26.0",
    "pydantic[email]>=2.7.4",
    "pydantic-settings==2.1.0",
    "python-multipart>=0.0.6",
    # Email validation for Pydantic EmailStr
    "email-validator>=2.0.0",
    # Database and Auth
    "supabase>=2.9.0", # Supabase client with auth support
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    "structlog>=23.2.0",
    # gRPC dependencies
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=6.0.0",
    # JSON Schema validation
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.24.0",              # For testing FastAPI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

# Service-specific dev dependencies
[tool.uv]
dev-dependencies = [
    "httpx>=0.24.0",              # For testing FastAPI
]

[tool.uv.sources]
# Add any local package sources here if needed

# Tool configurations inherited from workspace root
