[project]
name = "api-gateway-mvp"
version = "1.0.0"
description = "API Gateway MVP for Workflow Agent Team with Supabase Auth"
authors = [
    {name = "Workflow Agent Team", email = "team@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    # Core FastAPI stack
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.26.0",
    "pydantic[email]>=2.7.4",
    "pydantic-settings==2.1.0",
    "python-multipart>=0.0.6",
    # Email validation for Pydantic EmailStr
    "email-validator>=2.0.0",
    # Database and Auth
    "supabase>=2.9.0", # Supabase client with auth support
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    "python-json-logger>=2.0.0",
    # Redis dependencies
    "redis>=5.0.0",
    "redis[hiredis]>=5.0.0", # Enhanced performance with hiredis
    # gRPC dependencies removed - migrated to HTTP clients
    # JSON Schema validation
    "jsonschema>=4.0.0",
    # Security and validation
    "bleach>=6.0.0", # HTML sanitization
]

[project.optional-dependencies]
dev = [
    "httpx>=0.24.0",              # For testing FastAPI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

# Service-specific dev dependencies
[tool.uv]
dev-dependencies = [
    "httpx>=0.24.0",              # For testing FastAPI
    "pytest>=7.4.0",             # Test framework
    "pytest-asyncio>=0.21.0",    # Async test support
    "pytest-cov>=4.1.0",         # Coverage reporting
]

[tool.uv.sources]
# Add any local package sources here if needed

# Tool configurations inherited from workspace root
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "asyncio: mark test as async",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov-report=term-missing",
]
