[project]
name = "workflow-agent"
version = "1.0.0"
description = "LangGraph-based Workflow Agent for AI-powered workflow generation"
authors = [
    {name = "Workflow Agent Team", email = "team@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0,<1.0.0",
    "grpcio==1.59.0",
    "grpcio-tools==1.59.0",
    "protobuf==4.25.0",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic>=2.7.4",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "structlog==23.2.0",
    "redis==5.0.1",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "grpcio-status==1.59.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]