[project]
name = "workflow-agent"
version = "1.0.0"
description = "LangGraph-based Workflow Agent for AI-powered workflow generation"
authors = [
    {name = "Workflow Agent Team", email = "team@example.com"}
]
# readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0,<1.0.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.26.1,<6.0.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.26.0",
    "pydantic>=2.7.4",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "structlog>=23.2.0",
    "redis==5.0.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "jinja2>=3.1.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "grpcio-status>=1.68.0",
    "langgraph-cli>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "workflow_agent"
]

[tool.hatch.build.targets.wheel.sources]
"." = "workflow_agent"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
workflow-agent = { workspace = true }

[dependency-groups]
dev = [
    "langgraph-api",
    "langgraph-cli[inmem]>=0.3.4",
    "workflow-agent",
]
