[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow-engine"
version = "0.1.0"
description = "Workflow Engine for AI Agent Team Monorepo"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Agent Team", email = "team@example.com"},
]
keywords = ["workflow", "ai", "agent", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=4.21.0,<6.0.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pyjwt>=2.10.1",
    "supabase>=2.17.0",
    "google-generativeai>=0.8.0",
    "croniter>=2.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "networkx>=3.0.0",
]

[project.optional-dependencies]
dev = [
    # No service-specific dev dependencies
]

# Tool configurations inherited from workspace root
# Service-specific pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=workflow_engine",
]
asyncio_mode = "auto"

# Service-specific isort configuration
[tool.isort]
known_first_party = ["workflow_engine"]
