[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-agent-proto"
version = "0.1.0"
description = "gRPC protocol definitions for workflow agent"
requires-python = ">=3.8"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0", 
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.60.0",
]